# merge_queue

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  SECURITY_AUDIT.md  STATUS.md  hello.py  merge-queue.yml  pyproject.toml  rel_batch_a.py  rel_batch_b.py  rel_batch_c.py  release_test_1.py  release_test_2.py  release_test_3.py  stack_a.py  stack_b.py  state.json  test_main_a.py  test_main_b.py  test_solo.py
.github/workflows/: ci.yml  merge-queue-enqueue.yml  merge-queue-merge.yml  merge-queue.yml
ci/: format  lint  run  test
docs/: auto-retry.md  ci-gating.md  metrics.md  multi-branch.md  priority-merges.md  protected-paths.md  self-hosted.md  stacked-prs.md
examples/: merge-queue.yml
integration/: create_test_stacks.py
main/: STATUS.md
merge_queue/: README.md  __main__.py  batch.py  cli.py  comments.py  config.py  github_client.py  queue.py  rules.py  state.py  status.py  store.py  types.py
tests/: conftest.py  test_abort_on_dequeue.py  test_api_calls.py  test_auto_rebase.py  test_batch.py  test_branch_protection.py  test_break_glass.py  test_break_glass_merge.py  test_ci_gate.py  test_ci_gate_tdd.py  test_ci_provider.py  test_cleanup_stale.py  test_cli.py  test_cli_extra.py  test_comments_extra.py  test_configurable_ci.py  test_diverged_complete.py  test_hotfix_queue.py  test_metrics.py  test_multi_branch.py  test_per_branch.py  test_protected_paths.py  test_queue.py  test_rate_limit.py  test_rules.py  test_sanitize.py  test_status.py  test_status_extra.py  test_store.py  test_store_extra.py  test_stuck_completing.py  test_sync_missing.py
(+15 files in other folders)
