[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "merge-queue"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=merge_queue --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["merge_queue"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "Protocol",
    "\\.\\.\\.",
]
# CLI and GitHub client are integration-level code; core logic is tested
partial_branches = ["pragma: no branch"]
# github_client.py is I/O-only (API calls) — tested via integration tests
omit = ["merge_queue/github_client.py", "merge_queue/__main__.py"]
